fix: set gap between title and keywords at the biggest screen

--- a/src/widget/CasesHero/Datarails/Datarails.module.css
+++ b/src/widget/CasesHero/Datarails/Datarails.module.css
@@ -72,7 +72,7 @@
 
 @media screen and (width >=1920px) {
   .content {
-    --gap-content: 32px;
+    --gap-content: 40px;
 
     width: 65%;
   }
