--- a/src/widget/CasesHero/LivePerson/LivePerson.module.css
+++ b/src/widget/CasesHero/LivePerson/LivePerson.module.css
@@ -80,7 +80,7 @@
 
 @media screen and (width >=1920px) {
   .content {
-    --gap-content: 32px;
+    --gap-content: 40px;
 
     width: 65%;
   }
