--- a/src/widget/CasesHero/Oscar/Oscar.module.css
+++ b/src/widget/CasesHero/Oscar/Oscar.module.css
@@ -46,7 +46,7 @@
   }
 
   .content {
-    --gap-content: 32px;
+    --gap-content: 40px;
 
     width: 60%;
   }
